# db-accessor-api/src/main/java/com/agora/dbaccessor/model/PostDocument.java
@@ -6,7 +6,6 @@ import java.util.List;
 
 import org.springframework.data.annotation.Id;
 import org.springframework.data.mongodb.core.mapping.Document;
-import org.springframework.data.mongodb.core.mapping.Field;
 
 @Document(collection = "posts")
 public record PostDocument(
@@ -29,8 +28,8 @@ public record PostDocument(
     public record PostCommentDocument(
             String id,
             String section,
-            @Field("authorName") String author,
             String authorId,
+            String authorName,
             String content,
             OffsetDateTime createdAt,
             List<PostCommentReplyDocument> replies) {
@@ -43,8 +42,8 @@ public record PostDocument(
     public record PostCommentReplyDocument(
             String id,
             String parentId,
-            @Field("authorName") String author,
             String authorId,
+            String authorName,
             String content,
             OffsetDateTime createdAt) {
     }
